[package]
name = "stacktrace"
version = "0.1.0"
authors = ["Edward Pierzchalski <e.a.pierzchalski@gmail.com>"]
exclude = [".gitignore"]
readme = "README.md"
license = "Apache-2.0/MIT"
description = "A pretty printer for backtraces."
repository = "https://github.com/pierzchalski/stacktrace-rs"

[dependencies]
backtrace = "0.1.8"
libc = "0.2.4"

[[example]]
name = "ex1"
path = "examples/ex1/main.rs"
# Include debugging symbols even in release build
# so that the test still produces useful output
[profile.release]
debug = true
