[package]
name = "stacktrace"
version = "0.1.1"
authors = ["Edward Pierzchalski <e.a.pierzchalski@gmail.com>"]
exclude = [".gitignore"]
readme = "README.md"
license = "Apache-2.0/MIT"
description = "A pretty printer for backtraces."
repository = "https://github.com/pierzchalski/stacktrace-rs"
documentation = "https://pierzchalski.github.io/docs/stacktrace/stacktrace"
keywords = [
  "stack", "trace", "stacktrace", "backtrace",
]

[dependencies]
backtrace = "0.1.8"
libc = "0.2.4"

[[example]]
name = "ex1"
path = "examples/ex1/main.rs"
# Include debugging symbols even in release build
# so that the test still produces useful output
# unfortunately, this also keeps debug asserts
[profile.release]
debug = true

[[example]]
name = "ex2"
path = "examples/ex2/main.rs"
#[profile.release]
# debug = true
